apps/garage/overlays/development/tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-tailnet
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/tags: tag:shared-garage-dev
spec:
  defaultBackend:
    service:
      name: garage
      port:
        name: admin
  ingressClassName: tailscale
  tls:
    - hosts:
        - garage-dev
